--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,114 +1,39 @@
-/*google font code
-font-family: 'Montserrat', sans-serif;
-font-family: 'Raleway', sans-serif;
-font-family: 'Zilla Slab Highlight', cursive;*/
+
+
+/* google fonts
+font-family: 'Playfair Display', serif;
+font-family: 'Raleway', sans-serif;*/
+
 
 /* universal styles */
 
 html {
   font-size: 18px;
 }
+/*Responsive design code*/
 
-.bkgcontainer {
-  background-image: url("img.jpg");
-  background-color: black;
-  background-position: cover;
-  width: 100%;
-  height: 55rem;
-  background-size: 100%;
-  background-repeat: no-repeat;
-  position: absolute;
-}
 
-/*header styles*/
+// Extra small devices (portrait phones, less than 576px)
+@media (max-width: 575.98px) { ... }
 
-header {
-  height: 3rem;
-  position: fixed;
-  z-index: 1;
-  /*border: 1px black solid;*/
-  width: 100%;
-  background-color: rgba(147, 183, 190, 0.1);
-}
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) and (max-width: 767.98px) { ... }
 
-header h1 {
-  font-size: 1.5rem;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 600;
-  color: #554348;
-  height: 2rem;
-  text-align: center;
-  padding-top: 0.5rem;
-  padding-right: 0.5rem;
-  padding-left: 0;
-}
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) and (max-width: 991.98px) { ... }
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) and (max-width: 1199.98px) { ... }
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) { ... }
+
 
 h1 {
-  /*box-sizing: border-box;*/
-  border: 0.1px #554348 solid;
-  width: 30%;
-  float: right;
+  font-family: 'Playfair Display', serif;
 }
 
-/*nav bar styles*/
-
-
-nav {
-  margin-top: 3rem;
-  position: fixed;
-  /*border: 1px #554348 solid;*/
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding-left: 1rem;
-}
-nav li a {
-    display: block;
-    width: 7rem;
-    /*border: 0.5px #554348 solid;*/
-}
-nav a {
-
-  padding: 0;
-  border-radius: 5px;
-  margin: 0.25rem;
-  /*background-color: #554348;*/
-  /*#93b7be;*/
-  /*text-align: center;*/
-  text-decoration: none;
-  font-family: 'Zilla Slab Highlight', cursive;
-  /*font-family: 'Raleway', sans-serif;*/
-  font-size: 1.3rem;
-  font-weight: 400;
-  color: #554348;
-  /*#f6fedb;*/
-   transition-property: background-color text-shadow border;
-  transition-duration: 400ms;
-}
-
-nav a:hover {
-  background-color: rgba(147, 183, 190, 0.1);
-  color: #f6fedb;
-  text-shadow: 2px 2px #554348;
-  /*border: 1px #554348 solid;*/
-}
-
-/*main content stles*/
-
-.latest-news {
-  display: flex;
-  justify-content: center;
-}
-
-h2 {
-  font-size: 1.5rem;
-  font-family: 'Zilla Slab Highlight', cursive;
-  margin-top: 17rem;
-  text-align: center;
-  /*border: 0.1px #554348 solid;*/
-  width: 30%;
-  color: #554348;
-  font-weight: 400;
+.lead {
+  font-family: 'Raleway', sans-serif;
+  margin-top: 1rem;
 }
